@@ -34,6 +34,10 @@ on GitHub.
 * A `@ParameterizedTest` method configured with a `@MethodSource` annotation that
   references a factory method inherited from multiple interfaces no longer fails with an
   exception stating that multiple factory methods with the same name were found.
+* A `@ParameterizedTest` method configured with a `@MethodSource` annotation that
+  references a factory method whose name is the same as other test methods in the same
+  class no longer fails with an exception stating that multiple factory methods with the
+  same name were found.
 
 ==== Deprecations and Breaking Changes
 
